2004-01-07  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextIndex.c:
	* tests/textIndex.test: fixed bug in which 'wordstart' and 
	'wordend' were not utf-8 aware (they haven't been changed since
	Tk 8.0), and added tests.
	
2004-01-07  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinMenu.c: only provide a submenu handle when the
	MF_POPUP flag is given, fixing a recently-introduced crash
	when submenus are disabled.  Also better error checking for
	this sort of situation in the future.
	
2003-12-31  Daniel Steffen  <das@users.sourceforge.net>

        * macosx/Wish.pbproj/project.pbxproj: added missing private headers
        to installed Tk.framework, so that tkInt.h can be included  
        sucessfully from Tk.framework/PrivateHeaders.
	* generic/tkPort.h: corrected include of tkMacOSXPort.h

2003-12-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (ReconfigureWindowsMenu,
	TkWinHandleMenuEvent, DrawMenuEntryArrow):
	Fix drawing of a disabled cascade menu
	arrow. Tk was displaying a disabled cascade
	menu arrow in black instead of gray. This
	was caused by a bug in the Win32 code for
	user drawn menu items. The fix is to avoid
	telling Windows that the menu item is a
	cascade type and then draw the gray arrow
	bitmap on our own.
	[Patch 865842]

2003-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawWindowsSystemBitmap):
	Fix a strange Win32 bug where the logical
	coordinates returned by a call to DPtoLP
	are wrong the first time a menu is posted.
	This bug manifested itself by drawing the
	bitmap in the wrong place in a menu.
	The fix was to pass the newly created DC
	instead of the DC from the window.

2003-12-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (DrawMenuEntryAccelerator,
	DrawMenuEntryLabel): When drawing the label
	text and accelerator text for a disabled
	menu entry be sure to draw a 3D highlight.
	The only exception to this is when a